Requests updated